manifests/deployment-1.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "mycluster"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "mycluster"
    spec:
      containers:
        - name: "mycluster"
          image: "conregis.azurecr.io/mycluster"
          ports:
          - containerPort: 80
