manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "mycluster"
    labels:
        app: "mycluster"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: mycluster5fd5-mycluster.4a6d4e10cb204000b924.westeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "mycluster"
                servicePort: 80
